<resources>
    <string name="app_name">CriaderoApp</string>
    <string name="title_activity_home">HomeActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="textnousuario">No tiene Usuario, </string>
    <string name="textcrearusuario">Cree uno qui</string>
    <string name="olvidoclave">Olvido su clave, </string>
    <string name="recuperarclave">Recuperela Aqui</string>
    <string name="tituloLogin">Login</string>
    <string name="title">LOGIN</string>
    <string name="RegEstante">Registro de Estante</string>
    <string name="Actividad">Actividad Diaria</string>
    <string name="Estadisticas">Estadisticas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_estanque">EstanqueActivity</string>
    <string name="title_activity_insumos">InsumosActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="fila">texto</string>
    <string name="descripcion">lo que sea</string>
    <string name="content_description_media">vemos</string>
    <string name="isbn">prueba text</string>
    <string name="title_activity_proveedor">ProveedorActivity</string>
    <string name="RegEstanque">REGISTRO ESTANQUE</string>
</resources>