<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"

    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:layout_gravity="center"
        android:layout_margin="30dp"

        />
    <RelativeLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

     >

    <ImageView

        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        />

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop = "50dp"
        android:layout_marginLeft = "10dp"
        android:layout_marginRight = "10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Digite Usuario">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop = "5dp"
        android:layout_marginLeft = "10dp"
        android:layout_marginRight = "10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Digite Clave">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/clave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_marginTop = "20dp"
        android:layout_marginLeft = "100dp"
        android:layout_marginRight = "100dp"
        android:id="@+id/sesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primaryTextColor"
        android:text="Iniciar"/>

    <LinearLayout

        android:layout_marginTop = "20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/crearusuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textnousuario"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textcrearusuario"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/olvidoclave"/>

        <TextView
            android:id="@+id/recuperarclave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recuperarclave"/>

    </LinearLayout>

</LinearLayout>